# portugal-compliance

./: .pre-commit-config.yaml  README.md  auth.py  pyproject.toml  setup.py  setup.py.backup
portugal_compliance/: README.md  api.py  email.py  hooks.py  modules.txt  queries.py  requirements.txt
portugal_compliance/_temp/: field_management.py  tax_templates_portugal.json
portugal_compliance/api/: atcud_api.py  company_api.py  qrcode_atcud_utils.py  saft_api.py  series_api.py  signing_utils.py
portugal_compliance/auth/: validate_auth.py
portugal_compliance/config/: desktop.py
portugal_compliance/dashboards/: company.py  purchase_invoice.py  sales_invoice.py
portugal_compliance/doctype/: __init__.py
portugal_compliance/exceptions/: at_webservice_error.py  atcud_generation_error.py  saft_generation_error.py
portugal_compliance/fixtures/: custom_field.json  property_setter.json
portugal_compliance/install/: after_install.py  before_install.py  setup_company_portugal_compliance.py
portugal_compliance/migrations/: migrate_to_native_approach.py  migrate_to_native_series.py
portugal_compliance/notifications/: get_notification_config.py
portugal_compliance/onboarding/: portugal_setup.json
portugal_compliance/overrides/: __init__.py  delivery_note.py  journal_entry.py  payment_entry.py  purchase_invoice.py  purchase_receipt.py  sales_invoice.py  stock_entry.py
portugal_compliance/portugal_compliance/: auth.py
portugal_compliance/queries/: __init__.py  customer.py  get_permission_query_conditions_for_atcud.py  has_permission_for_atcud.py  (+3 more)
(+93 files in other folders)
