[project]
name = "portugal_compliance"
authors = [
    { name = "NovaDX - Octávio Daio", email = "app@novadx.eu" }
]
description = "Portuguese Fiscal Compliance App (SAF-T, ATCUD, QR Code, Signature)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    # Dependências críticas para funcionalidades fiscais
    "qrcode[pil] >=7.4.2",
    "Pillow >=10.0.0",
    "python-stdnum >=1.19",
    "lxml >=4.9.0",
    "zeep >=4.2.1",
    "suds-py3 >=1.4.5.0",
    "requests >=2.31.0",
    "urllib3 >=2.0.0",
    "defusedxml >=0.7.1",
    "cryptography >=41.0.0",
    "pycryptodome >=3.19.0",
    "validate-docbr >=1.10.0",
    "python-dateutil >=2.8.2",
    "pytz >=2023.3",
    "email-validator >=2.0.0",
    "unidecode >=1.3.6"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# Ex: "pytest" = "~=7.4.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "UP", "B", "RUF"
]
ignore = [
    "B017", "B018", "B023", "B904", "E101", "E402",
    "E501", "E741", "F401", "F403", "F405", "F722", "W191"
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
